# lore

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  MANUAL_TEST_REPORT.md  README.md  install.sh  lore  release-please-config.json
.githooks/: pre-push
.github/workflows/: ci.yml  release-please.yml  release.yml
docs/: index.md  reference.md
docs/functional/: accounts.md  agent-config.md  index.md
docs/implementation/: accounts.md  agent-config.md  cli.md  index.md
docs/infra/: index.md  release-and-distribution.md
src/: agents_md.rs  cli.rs  config.rs  lib.rs  main.rs  output.rs  paths.rs  symlink.rs  wire.rs
src/commands/: accounts.rs  behavior.rs  help.rs  help.txt  init.rs  install.rs  list.rs  mod.rs  remove.rs  sync.rs  update.rs
test/: install.bats  lore.bats
tests/integration/: accounts.rs  behavior.rs  dispatch.rs  helpers.rs  init.rs  install.rs  list.rs  main.rs  remove.rs  sync.rs  update.rs  version.rs
