[package]
name = "lore"
version = "0.2.0"
edition = "2024"
description = "Layered Orchestration for Rules and Extensions"
license = "MIT"

[[bin]]
name = "lore"
path = "src/main.rs"

[lib]
name = "lore"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
dirs = "5"

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
predicates = "3"
